# periphereader

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/ui/: periphereader-ui.slint
